third_party/move/move-compiler-v2/tests/checking/variants/variants_test_parse_err2.exp

Diagnostics:
error: unexpected token
   ┌─ tests/checking/variants/variants_test_parse_err2.move:10:11
   │
10 │         c is Red
   │           ^^
   │           │
   │           Unexpected 'is'
   │           Expected ';'
