third_party/move/move-compiler-v2/tests/checking/variants/variants_test_parse_err2.move
module 0x815::m {

    enum Color {
        RGB{red: u64, green: u64, blue: u64},
        Red,
        Blue,
    }

    fun test_red_or_rgb(c: Color): bool {
        c is Red
    }
}
